--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-﻿Flask==2.3.2
-nltk==3.8.1
-scikit-learn==1.3.2
-joblib==1.3.2
+Flask==2.3.2
 gunicorn==21.2.0
+scikit-learn==1.3.2
+nltk==3.8.1
+joblib==1.3.2
